add mysql healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Base de données MySQL
   mysql-db:
@@ -11,14 +9,17 @@ services:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_USER: caruser
       MYSQL_PASSWORD: carpass
-    ports:
-      - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-prootpassword"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
-  # phpMyAdmin pour gérer la base de données
+  # phpMyAdmin
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: car-rental-phpmyadmin
@@ -31,19 +32,12 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - mysql-db
+      mysql-db:
+        condition: service_healthy
     networks:
       - app-network
 
-  # Frontend (React) - Configuré par l'équipe frontend
-  frontend:
-    build: ./frontend
-    container_name: car-rental-frontend
-    ports:
-      - "8081:80"
-    networks:
-      - app-network
-
+  # Backend Node.js
   backend:
     build: ./backend
     container_name: car-rental-backend
@@ -55,10 +49,21 @@ services:
       DB_PASSWORD: carpass
       DB_NAME: car_rental
     depends_on:
-      - mysql-db
+      mysql-db:
+        condition: service_healthy
     networks:
       - app-network
 
+  # Frontend React + nginx
+  frontend:
+    build: ./frontend
+    container_name: car-rental-frontend
+    ports:
+      - "8081:80"
+    depends_on:
+      - backend
+    networks:
+      - app-network
 
 volumes:
   mysql-data:
